# python-avtalegiro

./: README.rst  pyproject.toml  setup.cfg
avtalegiro/: __init__.py  converters.py  enums.py  objects.py  records.py  utils.py  validators.py
docs/: Makefile  changelog.rst  conf.py  constants.rst  objects.rst  quickstart.rst  records.rst
tests/: test_converters.py  test_object_building.py  test_object_parsing.py  test_object_writing.py  test_objects.py  test_record_parsing.py  test_record_properties.py  test_record_writing.py  test_records_api.py  test_utils.py
